Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ATVNCG - Final Edition</title>
     <style>
         #admin-panel { 
@@ -355,5 +356,6 @@
 </script>
 </body>
 </html>
+
 
 
