--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="modal-content">
         <h3 style="color:var(--accent); margin:0;">BẠN RÚT ĐƯỢC</h3>
         <img id="modal-img" style="width:90px; height:125px; margin:15px auto; border:2px solid white; display:block; object-fit: cover;" src="">
-        <div style="display:flex; gap:10px;"><button class="btn" style="background:#2ecc71; flex:1;" onclick="resolveDraw(true)">OK DỨT</button><button class="btn" style="background:#e74c3c; flex:1;" onclick="resolveDraw(false)">TẠM XA NHAU</button></div>
+        <div style="display:flex; gap:10px;"><button class="btn" style="background:#2ecc71; flex:1;" onclick="resolveDraw(true)">ĐÓN VỀ</button><button class="btn" style="background:#e74c3c; flex:1;" onclick="resolveDraw(false)">TẠM XA NHAU</button></div>
     </div>
 </div>
 
@@ -104,7 +104,7 @@
         * <u>Lấy bài trên bàn</u>: Nếu bài trên tay hoặc bài trong khu “Đã tìm thấy nhau” có liên kết với bất kỳ lá nào trên bàn -> được lấy lá đó. (Bắt buộc phải có liên kết mới được lấy)<br>
         * <u>Rút bài úp</u>: Được rút khi không thể lấy bài trên bàn hoặc chủ động không lấy. Sau khi rút có thể bỏ qua hoặc giữ lại trên tay.<br><br>
         <b>4. Kết thúc & tính điểm:</b><br>
-        Ván kết thúc khi hết toàn bộ bài hoặc không thể rút/liên kết thêm.<br>
+        Ván kết thúc khi một bên hết toàn bộ bài hoặc không thể rút/liên kết thêm.<br>
         - Mỗi liên kết: <b>+1 điểm</b><br>
         - Đủ team: <b>+5 điểm</b><br>
         - Mỗi lá lẻ trên tay: <b>-2 điểm</b>
@@ -386,3 +386,4 @@
 </script>
 </body>
 </html>
+
