Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="play-area"><div class="captured-zone"><div class="zone-label"><span>Đã tìm thấy nhau</span> <span id="score-p" style="color:#2ecc71">0</span></div><div id="p-captured" class="captured-list"></div></div><div id="p-hand" class="card-row-scroll"></div></div>
         <div class="right-controls"><div class="circle-ui"><div id="timer-val">15</div><div class="timer-label">GIÂY</div></div><div id="turn-circle" class="circle-ui p-active"><div id="turn-indicator">GAI<br>CON</div></div><div id="draw-pile" onclick="playerDraw()"><span id="draw-count"></span></div></div>
     </div>
-    <div class="side-bar"><h4 style="text-align:center; color:var(--accent);">TIẾN ĐỘ TEAM</h4><div id="side-teams" class="scroll-v" style="height:450px;"></div><button class="btn" style="background:#3498db;" onclick="togglePause()">Tạm dừng</button><button class="btn" style="background:#9b59b6;" onclick="resetGame()">Làm lại</button></div>
+    <div class="side-bar"><h4 style="text-align:center; color:var(--accent);">CÁC TEAM</h4><div id="side-teams" class="scroll-v" style="height:450px;"></div><button class="btn" style="background:#3498db;" onclick="togglePause()">Tạm dừng</button><button class="btn" style="background:#9b59b6;" onclick="resetGame()">Làm lại</button></div>
 </div>
 
 <script>
@@ -469,6 +469,7 @@ function autoMoveToEnd(playerHand, playerCap) {
 </script>
 </body>
 </html>
+
 
 
 
