--- a/index.html
+++ b/index.html
@@ -124,9 +124,14 @@
         <h4 style="color:var(--accent); margin:0;">CÁC TEAM</h4>
         <small style="color: white; font-size: 10px; opacity: 0.8;">Tự ôn bài nhé!</small>
     </div>
+    
     <div id="side-teams" class="scroll-v" style="height:450px;"></div>        
-    </div><button class="btn" style="background:#3498db;" onclick="togglePause()">Tạm dừng</button><button class="btn" style="background:#9b59b6;" onclick="resetGame()">Làm lại</button></div>
-</div>
+    
+    <div style="display: flex; flex-direction: column; gap: 10px; margin-top: 10px;">
+        <button class="btn" style="background:#3498db;" onclick="togglePause()">Tạm dừng</button>
+        <button class="btn" style="background:#9b59b6;" onclick="resetGame()">Làm lại</button>
+    </div>
+</div> ```
 
 <script>
     const AT_NAMES = ["Hồng Sơn","Bằng Kiều","Tự Long","Phan Đinh Tùng","Tuấn Hưng","Đinh Tiến Đạt","Phạm Khánh Hưng","Tiến Luật","Thành Trung","Đăng Khôi","Trương Thế Vinh","Hà Lê","Đỗ Hoàng Hiệp","Thanh Duy","Quốc Thiên","Binz","Cường Seven","Nguyễn Trần Duy Nhất","Jun Phạm","Neko Lê","Tăng Phúc","Thiên Minh","BB Trần","Liên Bỉnh Phát","S.T Sơn Thạch","Rhymastic","Kiên Ứng","(S)TRONG Trọng Hiếu","Soobin Hoàng Sơn","Kay Trần","Bùi Công Nam","Duy Khánh","HuyR","Anh Tuấn","SLIMV","Đinh Hà Uyên Thư","Vĩ Khang","Long Kenji","Khánh Vy","Nhà Đam Mê","Nhà KK","Nhà Sao Sáng","Nhà Tái Sinh","Nhà Ngũ Hành","Nhà Hát","Nhà Xuân Hạ Thu Đông","Nhà Xương Rồng","Gai Con","Concert","Hỏa Ca"];
@@ -475,4 +480,5 @@ function autoMoveToEnd(playerHand, playerCap) {
 </script>
 </body>
 </html>
+
 
