--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ function showEndPopup(pScore, aiScore) {
     } else if (aiScore > pScore) {
         resultText = "Đen thôi, ĐỎ QUÊN ĐI";
     } else {
-        resultText = "Hòa nhau rồi!";
+        resultText = "TRÁI ĐẤT TRÒN";
     }
 
     document.getElementById('end-winner').innerText = resultText;
@@ -489,6 +489,7 @@ function showEndPopup(pScore, aiScore) {
 </script>
 </body>
 </html>
+
 
 
 
