--- a/index.html
+++ b/index.html
@@ -520,10 +520,11 @@ function closeCoNha() {
     
 function goToCoNha() {
     closeCoNha();
-    window.location.href = '#';
+    window.location.href = 'https://forms.gle/a3oqYKuHyV9TppEx5';
 }
 </script>
 </body>
 </html>
+
 
 
