--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <p style="color: #dda0dd; font-weight: bold; font-size: 18px; margin-bottom: 30px;">
             Khó hơn, giành giật hơn nhưng mà xem lưu ý giúp mình.
         <p style="color: #ff4757; font-weight: bold; font-size: 16px; margin-bottom: 6px;">
-             Lưu ý: Phiên bản này có zone 5 ngón tay (Map ẩn nha)
+             Lưu ý: Phiên bản này có zone cúp le (5 cúp le lên xe ở Day1)
         </p>
 
         <div style="color: #ddd; font-size: 14px; line-height: 1.6; margin-bottom: 5px; text-align: left; padding: 0 10px;">
@@ -525,6 +525,7 @@ function goToCoNha() {
 </script>
 </body>
 </html>
+
 
 
 
